# Newzyfy

./: .env.example  .gitignore  Open-News-Dashboard.vbs  README.md  Start-News-Intelligence.vbs  Stop-News-Intelligence.vbs  compose.yaml  pyproject.toml
backend/: alembic.ini
backend/migrations/: env.py
backend/migrations/versions/: 0001_phase1_foundation.py  0002_integration_contracts.py  0003_channel_polling.py  0004_article_processing.py  0005_claims_evidence.py  0006_source_dashboard.py  0007_candidate_job_metadata.py  0008_processing_state_observability.py  0009_candidate_url_type.py  0010_access_control.py
backend/src/newsintel/: __init__.py  doctor.py  main.py
backend/src/newsintel/adapters/: __init__.py
backend/src/newsintel/api/: __init__.py  dependencies.py
backend/src/newsintel/application/: __init__.py
backend/src/newsintel/contracts/: __init__.py  events.py
backend/src/newsintel/core/: __init__.py  config.py  (+3 more)
backend/tests/integration/: test_health_api.py
backend/tests/unit/: test_acquisition_service.py  test_article_extractor.py  test_article_filter.py  test_article_processing.py  test_canonicalization.py  test_change_detection.py  test_claim_extraction.py  test_config.py  test_doctor.py  test_event_assignment.py  test_event_matching.py  test_feeds.py  test_frontier.py  test_ids.py  test_local_artifact_store.py  test_polling.py  test_safe_fetcher.py  test_sitemaps.py  test_source_discovery.py  test_worker_retry.py
docs/: ACQUISITION_ARCHITECTURE.md  ARCHITECTURE.md  EVENT_INTELLIGENCE_ARCHITECTURE.md  IMPLEMENTATION_GUARDRAILS.md  IMPLEMENTATION_PLAN.md  LOCAL_AI_STRATEGY.md  MODULE_SYNCHRONIZATION.md
scripts/: app-dashboard.ps1  app-start.ps1  app-stop.ps1  bootstrap.ps1  install-windows-shortcuts.ps1  run-platform.ps1  services.ps1  test.ps1
(+61 files in other folders)
