[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "news-intelligence-platform"
version = "0.1.0"
description = "Event-centric, evidence-backed news intelligence platform"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "Proprietary" }
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "defusedxml>=0.7.1,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
extractors = [
  "trafilatura>=2.0,<3",
]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "types-defusedxml>=0.7,<1",
]

[project.scripts]
newsintel-api = "newsintel.main:run"
newsintel-doctor = "newsintel.doctor:run"
newsintel-poller = "newsintel.workers.poller:run"
newsintel-articles = "newsintel.workers.articles:run"
newsintel-outbox = "newsintel.workers.outbox:run"
newsintel-cleanup-old-jobs = "newsintel.maintenance.cleanup_old_jobs:run"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/newsintel"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
markers = [
  "integration: exercises multiple application components",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["newsintel"]
